8216970: condy causes JVM crash

Fix issue with ConstantPool::constant_tag_at to correctly handle a condy whose return type is an array.

Reviewed-by: acorn, hseigel, jrose